# cz-jacob-rules

./: .gitignore  CHANGELOG.md  README.md  cz_jacob.py  pyproject.toml  setup.py
